# xw

./: README.md  docker-compose.test.yml  docker-compose.yml
api/: .env  .env.test  Cargo.toml
api/src/: api_result.rs  main.rs
api/src/clues/: controller.rs  mod.rs  model.rs
client/: .env  .eslintrc.js  .prettierrc  package.json
client/public/: index.html  manifest.json
client/src/: App.tsx  AppProviders.tsx  api-client.ts  index.tsx  setupTests.ts
client/src/clues/: ClueCard.scss  ClueCard.tsx  ClueScreen.test.tsx  ClueScreen.tsx  CluesScreen.scss  CluesScreen.test.tsx  CluesScreen.tsx  CluesTable.test.tsx  CluesTable.tsx  CreateClueForm.scss  CreateClueForm.test.tsx  CreateClueForm.tsx  UpdateClueForm.scss  UpdateClueForm.test.tsx  UpdateClueForm.tsx  clues-constants.ts  clues-mutations.ts  clues-queries.ts
client/src/components/: FadeOut.scss  FadeOut.test.tsx  FadeOut.tsx  FormActions.tsx  Heading.scss  Heading.test.tsx  HomeLink.scss  HomeLink.test.tsx  HomeLink.tsx  LargeButtonLink.tsx  Layout.scss  Layout.test.tsx  Layout.tsx  MutationStatusIndicator.scss  MutationStatusIndicator.tsx  QueryState.scss  QueryState.test.tsx  QueryState.tsx  index.ts
client/src/services/: index.ts
client/src/test/: clues-data.ts  clues-handlers.ts  server.ts  (+4 more)
flyway/secrets/: flyway.conf
flyway/sql/: V1__Create_clue_table.sql  V2__Create_full-text_search_index.sql  afterMigrate__1_Insert_clue_development_and_test_data.sql  afterMigrate__1_Insert_clue_development_data.sql
postgres/: init-db.sh
postgres/secrets/: API_PASSWORD  FLYWAY_PASSWORD  POSTGRES_PASSWORD
(+54 files in other folders)
