[package]
name = "api"
version = "0.1.0"
authors = ["Tim Lawson <hello@timlawson.dev>"]
edition = "2018"

[dependencies]
actix-web = "4.0.0-beta.6"
anyhow = "1.0.40"
dotenv = "0.15.0"
futures = "0.3.15"
serde = "1.0.126"
serde_json = "1.0.64"
sqlx = { version = "0.5.5", features = ["postgres", "runtime-tokio-rustls"] }
thiserror = "1.0"

[dev-dependencies]
actix-rt = "2.2.0"